--- a/fridge_door.html
+++ b/fridge_door.html
@@ -53,13 +53,9 @@
           {{#if type_is "image"}}
             <img src="{{content}}" />
           {{/if}}
-          {{#if type_is "video"}}
-          {{{ content }}}
-          {{/if}}
           {{#if type_is "text"}}
-            <div>{{content}}</div>
+            <div>{{{ content }}}</div>
           {{/if}}
-
         {{/each}}
     </div>
   {{/with}}
@@ -69,10 +65,6 @@
   <div class="new_post">
     <input type="text" id="new_post_content" />
     <input type="button" class="add btn" value="Add post"/>
-    <div id="post_types">
-      <input type="radio" name="post_type" value="image" class="post_type">Pic</input>
-      <input type="radio" name="post_type" value="video"class="post_type">Video</input>
-      <input type="radio" name="post_type" value="text"class="post_type">Text</input>
     </div>
   </div>
 </template>
